[package]
name = "fastly-template-rust-default"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "^0.7.0"
lazy_static = "1.4.0"
regex = "1"
hmac = "0.8.1"
sha2 = "0.9.1"
nom = "5.1.0"
#url = "2.1.1"
itertools = "0.9.0"
m3u8-rs = "1.0.7"
base64 = "0.12.3"
hex = "0.4.2"
